# GLRenderer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  build.sh  setup.sh
Engine/inc/Engine/: VR_Engine.hpp
Engine/inc/Engine/Platform/: getAbsolutePath.hpp
Engine/inc/Engine/Platform/Input/: GLFW_InputService.hpp
Engine/inc/Engine/Platform/Input/Interface/: IInputService.hpp
Engine/inc/Engine/Platform/RenderSurface/: GLFW_RenderSurface.hpp
Engine/inc/Engine/Platform/RenderSurface/Interface/: IRenderSurface.hpp
Engine/inc/Engine/Platform/Window/: GLFW_Window.hpp
Engine/inc/Engine/Platform/Window/Interface/: IWindow.hpp
Engine/inc/Engine/Renderer/Interface/: ICamera.hpp  IMesh.hpp  IMeshBuffers.hpp  IModel.hpp  IRenderScene.hpp  IRenderer.hpp  IShader.hpp  ITexture.hpp  ITransformable.hpp  ModelInstance.hpp
Engine/inc/Engine/Renderer/Interface/Lighting/: ILightSource.hpp  IMaterial.hpp
Engine/inc/Engine/Renderer/Interface/Types/: CameraCommand.hpp  IRendererContextDesc.hpp  Vertex.hpp  VertexAttribFlags.hpp  VertexAttribFlagsOperators.hpp
Engine/inc/Engine/Renderer/OpenGL/: GLCamera.hpp  GLMesh.hpp  GLMeshBuffers.hpp  GLModel.hpp  GLRenderer.hpp  GLShader.hpp  GLTexture.hpp  GLTextureBinder.hpp  GLTextureCache.hpp  OpenGLInitializer.hpp  Transformable.hpp  TransformableGLModel.hpp
Engine/inc/Engine/Renderer/OpenGL/Lighting/: GLMaterial.hpp
Engine/inc/Engine/Renderer/OpenGL/Lighting/Types/: GLDirLight.hpp  GLPointLight.hpp  GLSpotLight.hpp
Engine/inc/Engine/Renderer/OpenGL/Scenes/C3/: ModelLoading.hpp
Engine/inc/Engine/Renderer/OpenGL/Types/: GLCameraInputContext.hpp  GLRenderState.hpp  GLRendererContextDesc.hpp
Engine/inc/Engine/Scene/: VR_Test_Scene.hpp
Engine/inc/Engine/Scene/Interface/: IScene.hpp
Engine/inc/Engine/Utils/Math/: Clamp.hpp  Lerp.hpp
Engine/inc/Engine/Utils/Platform/: getAboslutePath.hpp
Engine/res/Models/BFG/: license.txt  scene.gltf
Engine/res/Other/: resource.rc
Engine/res/Shaders/Scenes/C1/: main.frag
Engine/res/Shaders/Scenes/C2/: lighting.frag
Engine/src/: main.cpp
Engine/src/Engine/Engine/: VR_Engine.cpp
Engine/src/Engine/Engine/Scene/: ModelScene.cpp
Engine/src/Engine/Platform/Input/: GLFW_InputService.cpp
Engine/src/Engine/Platform/RenderSurface/: GLFW_RenderSurface.cpp
Engine/src/Engine/Platform/Window/: GLFW_Window.cpp
Engine/src/Engine/Renderer/OpenGL/: GLCamera.cpp  GLMesh.cpp  GLMeshBuffers.cpp  GLModel.cpp  GLRenderState.cpp  GLRenderer.cpp  GLShader.cpp  GLTexture.cpp  GLTextureBinder.cpp  GLTextureCache.cpp  OpenGLInitializer.cpp
Engine/src/Engine/Renderer/OpenGL/Lighting/: GLMaterial.cpp
Engine/src/Engine/Renderer/OpenGL/Lighting/Types/: GLDirLight.cpp  GLPointLight.cpp  GLSpotLight.cpp
Engine/src/Engine/Renderer/OpenGL/Scenes/C3/: ModelLoading.cpp  ModelLoadingGUI.cpp
GLRenderer/ext/lib/mac/: .gitkeep
GLRenderer/ext/lib/windows/: glfw3.lib
GLRenderer/inc/: Engine.hpp
GLRenderer/inc/GLRenderer/Input/: GLFW_InputHandler.hpp
GLRenderer/inc/GLRenderer/Input/Interface/: IInputHandler.hpp
GLRenderer/inc/GLRenderer/Interface/: ICamera.hpp  IGUIRenderScene.hpp  IMesh.hpp  IMeshBuffers.hpp  IModel.hpp  IRenderScene.hpp  IRenderer.hpp  IResizableScene.hpp  ISceneInputHandler.hpp  ISceneManager.hpp  IShader.hpp  ITexture.hpp  ITransformable.hpp  Vertex.hpp
GLRenderer/inc/GLRenderer/Interface/Lighting/: ILightManager.hpp  ILightSource.hpp  IMaterial.hpp
GLRenderer/inc/GLRenderer/Interface/Types/: IRendererContextDesc.hpp  Vertex.hpp  VertexAttribFlags.hpp  VertexAttribFlagsOperators.hpp
GLRenderer/inc/GLRenderer/OpenGL/: GLCamera.hpp  GLMesh.hpp  GLMeshBuffers.hpp  GLModel.hpp  GLRenderer.hpp  GLSceneInputHandler.hpp  GLSceneManager.hpp  GLShader.hpp  GLTexture.hpp  GLTextureBinder.hpp  GLTextureCache.hpp  OpenGLInitializer.hpp  Transformable.hpp  TransformableGLModel.hpp
GLRenderer/inc/GLRenderer/OpenGL/Lighting/: GLLightManager.hpp  GLMaterial.hpp  GLPointLight.hpp
GLRenderer/inc/GLRenderer/OpenGL/Lighting/Types/: GLDirLight.hpp  GLPointLight.hpp  GLSpotLight.hpp
GLRenderer/inc/GLRenderer/OpenGL/Scenes/C1/: HelloTriangle.hpp  Quad3D.hpp  TexturedQuad.hpp  TexturedTriangle.hpp
GLRenderer/inc/GLRenderer/OpenGL/Scenes/C2/: LightingCubes.hpp
GLRenderer/inc/GLRenderer/OpenGL/Scenes/C3/: ModelLoading.hpp
GLRenderer/inc/GLRenderer/OpenGL/Scenes/C4/: DepthTesting.hpp
GLRenderer/inc/GLRenderer/OpenGL/Types/: GLCameraInputContext.hpp  GLRenderState.hpp  GLRendererContextDesc.hpp
GLRenderer/inc/GLRenderer/Utils/: getAbsolutePath.hpp
GLRenderer/inc/GLRenderer/Window/: GLFWRenderSurface.hpp  GLFW_Window.hpp  Window.hpp
GLRenderer/inc/GLRenderer/Window/Interface/: IRenderSurface.hpp  IWindow.hpp
GLRenderer/res/Other/: resource.h
GLRenderer/res/Shaders/Scenes/C1/: 3D.vert  main.vert  texture.frag
GLRenderer/res/Shaders/Scenes/C2/: lightSource.frag  lightSource.vert  lighting.frag  lighting.vert
GLRenderer/res/Shaders/Scenes/C3/: modelLoading.frag  modelLoading.vert
GLRenderer/src/: Engine.cpp  main.cpp
GLRenderer/src/GLRenderer/: GLRenderer.cpp
GLRenderer/src/GLRenderer/Input/: GLFW_InputHandler.cpp
GLRenderer/src/GLRenderer/OpenGL/: GLCamera.cpp  GLMesh.cpp  GLMeshBuffers.cpp  GLModel.cpp  GLRenderState.cpp  GLSceneInputHandler.cpp  GLSceneManager.cpp  GLShader.cpp  GLTexture.cpp  GLTextureBinder.cpp  GLTextureCache.cpp  OpenGLInitializer.cpp
GLRenderer/src/GLRenderer/OpenGL/Lighting/: GLLightManager.cpp  GLMaterial.cpp  GLPointLight.cpp
GLRenderer/src/GLRenderer/OpenGL/Lighting/Types/: GLDirLight.cpp  GLPointLight.cpp  GLSpotLight.cpp
GLRenderer/src/GLRenderer/OpenGL/Scenes/C1/: HelloTriangle.cpp  Quad3D.cpp  TexturedQuad.cpp  TexturedTriangle.cpp
GLRenderer/src/GLRenderer/OpenGL/Scenes/C2/: LightingCubes.cpp
GLRenderer/src/GLRenderer/OpenGL/Scenes/C3/: ModelLoading.cpp  ModelLoadingGUI.cpp
GLRenderer/src/GLRenderer/Window/: GLFWRenderSurface.cpp  GLFW_Window.cpp  Window.cpp
setup-linux/: setup-arch.sh  setup-debian.sh
